--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -10,6 +10,7 @@
     "app_drawer_dashboards" : "Tableros",
     "app_drawer_currency" : "Moneda",
     "app_drawer_dark_mode" : "Modo Oscuro",
+    "app_drawer_light_mode" : "modo de luz",
     "app_drawer_settings" : "Configuración",
     "app_drawer_logout" : "Cerrar Sesión",
 
